# pojehat

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  DEVELOPMENT.md  FRAMEWORK.md  README.md  entrypoint.py  mega_ingest.py  nixpacks.toml  pyproject.toml  railway.json  vercel.json
docs/: RAG_HARDENING_PLAN_2026.md
pojehat-web/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
src/: verify_pipeline.py
src/app/: main.py
src/core/: config.py
src/domain/: pdf_parser.py  rag_engine.py  vehicle_specs.py
src/scripts/: backfill_metadata.py  create_text_indexes.py  debug_retrieval.py  fix_domain_tags.py  ingest_academia_folder_2.py  ingest_academic_sources.py  ingest_accessible_sources.py  ingest_can_dbc.py  ingest_carapi.py  ingest_chery_dtcs.py  ingest_cvt_diagnostics.py  ingest_dbc_collection.py  ingest_deep_web_sources.py  ingest_ecu_pinouts.py  ingest_egyptian_targets.py  ingest_folder_1.py  ingest_folder_2.py  ingest_local_pdfs.py  ingest_manuals_cli.py  ingest_nhtsa.py  ingest_obd_ecu_data.py  ingest_obd_ecu_raw.py  ingest_priority_gaps.py  ingest_protocol_urls.py  ingest_protocols.py  ingest_public_diagnostics.py  ingest_research_batch.py  ingest_x431_docs.py  init_qdrant_indices.py  mass_ingest_batch.py  mega_ingest.py  mega_ingest_v4.py  mega_ingest_v5.py  mega_ingest_v6.py  mega_ingest_v7.py  recovery_ingestion.py  test_ingestion.py  test_qdrant.py
src/services/: bulk_ingester.py  web_ingester.py
tests/: test_audit_intent.py  test_ingestion_deduplication.py  verify_v6_ingestion.py
tests/eval/: test_rag_quality.py
(+11 files in other folders)
