[project]
name = "pojehat"
version = "0.1.0"
description = "AI-Driven AutoTech RAG & ECU Tuning SaaS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.7.0",
    "llama-index>=0.10.20",
    "llama-index-llms-openrouter>=0.1.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "qdrant-client>=1.8.0",
    "pymupdf>=1.24.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "numpy>=1.26.0",
    "llama-index-embeddings-openai>=0.5.2",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "fastembed>=0.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
